# ob_os

./: CMakeLists.txt  README.md
Editor/DesignerApp/: CMakeLists.txt  icon.rc  jltResource.qrc  jltscriptconnector.cpp  jltscriptconnector.h  jltscriptdrop.cpp  jltscriptdrop.h  jltscriptnode.cpp  jltscriptnode.h  jltscriptscene.cpp  jltscriptscene.h  jltscriptshape.cpp  jltscriptshape.h  jstdlensdb.cpp  jstdlensdb.h  main.cpp
Editor/DesignerApp/JS/: GameRemote.js  LiveSwitchData.js  ScriptBuffer.js  SetHabit.js  VisibleData.js
Editor/DesignerApp/ModelFile/: JConfig.ini
Editor/DesignerApp/ModelFile/JAKA/: Joint1.mesh  Joint2.mesh  Joint3.mesh  Joint4.mesh  Joint5.mesh  Joint6.mesh  Joint7.mesh  Railway.mesh
Editor/DesignerApp/ModelFile/KUKA/: Joint1.mesh  Joint2.mesh  Joint3.mesh  Joint5.mesh  Joint6.mesh  Joint7.mesh  ToolObj.mesh
Editor/DesignerApp/ModelFile/KUKA3010/: Joint1.mesh  Joint3.mesh  Joint5.mesh  Joint6.mesh  Joint7.mesh  SlidingTable.mesh
Editor/DesignerApp/Qml/: Main.qml  MainMenuBar.qml
Editor/DesignerApp/Qml/ChildWindow/: AboutAppWindow.qml  AboutUsWindow.qml  CameraDownloadSet.qml  CloseMainWindow.qml  JltWindow.qml  NasCommitWindow.qml  NewScriptWindow.qml  NewSessionWindow.qml  RobotInstallInit.qml  RobotMsgWindow.qml
Editor/DesignerApp/Qml/Component/: BackGroundItem.qml  BaseTextInputItem.qml  BaseTextInputItemDouble.qml  BaseTextInputItemString.qml  BaseTextItem.qml  BaseTextItemDouble.qml  BaseTextItemString.qml  BaseValueItem.qml  ComboxItem.qml  ComboxValueItem.qml  DeviceTextItem.qml  DeviceValueItem.qml  DeviceValuesItem.qml  LabelValueItem.qml  LableTextItem.qml  RemoteItem.qml  SingleTestShow.qml  SingleTextEdit.qml  SliderInputItem.qml  SliderPressItem.qml  SpinBoxValueItem.qml  StateButtonItem.qml  StateComboxItem.qml  StrInputItem.qml  StrSetItem.qml  SwitchButtonItem.qml  TagItem.qml  TextConcealItem.qml  TextInputDoubleItem.qml  TextInputItem.qml  TextInputStringItem.qml  TextShowItem.qml  ToolButton.qml  ToolButtonNoClick.qml  ToolButtonReturn.qml
Editor/DesignerApp/Qml/JltComponent/: DeviceDisconnectPage.qml  IntShowInput.qml  JltMenu.qml  JltMenuItem.qml  RemoteButton.qml  StudioDisconnectPage.qml  TextButtonItem.qml  UpdateButton.qml
Editor/DesignerApp/Qml/View3D/: View3D.qml  View3DScene.qml
Editor/DesignerApp/Qml/ViewCamera/: ViewCamera.qml
Editor/DesignerApp/Qml/ViewEditor/: ScriptNodeMenu.qml  ScriptScene.qml  ScriptSceneMenu.qml  ScriptSceneView.qml  ViewScript.qml
Editor/DesignerApp/Qml/ViewRemote/: CameraFocuseItem.qml  CameraPage.qml  CameraPreset.qml  CameraPropertItem.qml  CameraRemote.qml  CameraRemoteData.qml  CameraRemoteItem.qml  ControlServerPage.qml  FollowFocusControl.qml  FollowFocusPage.qml  FollowFocusProperty.qml  RobotAbsSpeedItem.qml  RobotDirectionItem.qml  RobotInstall.qml  RobotItem.qml  RobotPage.qml  RobotProperty.qml  RobotRemoteItem.qml  TurnplateControl.qml  TurnplatePage.qml  TurnplateProperty.qml  UnSessionOpen.qml  (+1 more)
Editor/DeviceApp/: CMakeLists.txt  bigResource.qrc  editorqml.cpp  editorqml.h  main.cpp
Editor/DeviceApp/Editor/: CMakeLists.txt  bigResource.qrc  editorqml.cpp  editorqml.h  main.cpp
Editor/DeviceApp/Qml/: CameraFrameItem.qml  CameraView.qml  DeviceTagItem.qml  JCameraLiveViewWindow.qml  JCameraPage.qml  JConfigPage.qml  JFollowFocusPage.qml  JFreedPage.qml  JRobotPage.qml  JScriptPage.qml  VirtualCameraItem.qml  main.qml
Editor/UpdateApp/: CMakeLists.txt  jltResource.qrc  main.cpp  updatemanager.cpp  updatemanager.h
Editor/UpdateApp/Qml/: Main.qml
JltMoco/: CMakeLists.txt
JltMoco/include/: global.h  jconfig.h  jltmoco.h
JltMoco/include/Core/: jcameraproperty.h  jrobotarray.h  jsessionmodel.h
JltMoco/include/Interface/: abstractcamera.h  abstractfollowfocus.h  abstractrobot.h  abstractturnplate.h
JltMoco/include/NetWork/: studioclient.h  studioserver.h  studiosocket.h
JltMoco/include/Remote/: jfollowfocusremote.h  jgamepad.h
JltMoco/include/Session/: jnode.h  jnodecamera.h  jnodefollowfocus.h  jnoderobot.h  jnodeturnplate.h  jscript.h  jscriptarchive.h  jscriptcamera.h  jscriptfollowfocus.h  jscriptrobot.h  jscriptscene.h  jscriptturnplate.h  jsession.h
JltMoco/include/Studio/: deviceabstrcat.h  jcamera.h  jcameradevice.h  jcamerainstall.h  jfollowfocus.h  jfreed.h  jglobalremoteparam.h  jrobot.h  jturnplate.h  scriptcontroller.h  studiocontroller.h
JltMoco/src/: jconfig.cpp
JltMoco/src/Core/: jcameraproperty.cpp  jrobotarray.cpp  jsessionmodel.cpp
JltMoco/src/NetWork/: studioclient.cpp  studioserver.cpp  studiosocket.cpp
JltMoco/src/Remote/: jfollowfocusremote.cpp  jgamepad.cpp
JltMoco/src/Session/: jnode.cpp  jnodecamera.cpp  jnodefollowfocus.cpp  jnoderobot.cpp  jnodeturnplate.cpp  jscript.cpp  jscriptarchive.cpp  jscriptcamera.cpp  jscriptfollowfocus.cpp  jscriptrobot.cpp  jscriptscene.cpp  jscriptturnplate.cpp  jsession.cpp
JltMoco/src/Studio/: deviceabstract.cpp  jcamera.cpp  jcameradevice.cpp  jcamerainstall.cpp  jfollowfocus.cpp  jfreed.cpp  jglobalremoteparam.cpp  jrobot.cpp  jturnplate.cpp  scriptcontroller.cpp  studiocontroller.cpp
Plugins/Plugin_JakaRobot/: CMakeLists.txt  jakaplugin.cpp  jakaplugin.h  jrobot.cpp  jrobot.h  jroboterrortext.cpp  jroboterrortext.h  jtrack.cpp  jtrack.h
Plugins/Plugin_JakaRobot/inc/: JAKAZuRobot.h
Plugins/Plugin_JakaRobot/lib64/: jakaAPI.exp  jakaAPI.lib
Plugins/Plugin_KukaRobot/: CMakeLists.txt  KukaRobot.json  kukaplugin.cpp  kukaplugin.h  robotsocket.cpp  robotsocket.h  tinyxml2.h
Plugins/Plugin_MotorAirFocus/: CMakeLists.txt  focusplugin.cpp  focusplugin.h
Plugins/Plugin_SonyCamera/: CMakeLists.txt  cameradefined.h  cameradevice.cpp  cameradevice.h  cameraplugin.cpp  cameraplugin.h  config.json  propertyvaluetable.cpp  propertyvaluetable.h  workerthread.cpp  workerthread.h
Plugins/Plugin_SonyCamera/CRSDK/: CameraRemote_SDK.h  CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h  ICrCameraObjectInfo.h  IDeviceCallback.h
Plugins/Plugin_SonyCamera/lib/: Cr_Core.lib
Plugins/Plugin_Turnplate/: CMakeLists.txt  turnplateplugin.cpp  turnplateplugin.h
(+140 files in other folders)
